--- a/frosti.config.yaml
+++ b/frosti.config.yaml
@@ -1,10 +1,10 @@
 # 网站的基本信息
 site:
-  tab: Nikitosti # 浏览器标签栏上显示的文本
-  title: 💠 Frosti # 网站的标题
-  description: A clean, elegant, and fast static blog template! 🚀 Developed with Astro # 网站的描述，用于SEO等
-  language: en # 网站的语言，例如 "en" 是英文
-  favicon: /favicon.ico # 网站的图标，用于浏览器标签栏和其他地方显示
+  tab: Naster17
+  title: ☠️ Naster17
+  description: Personal Blog | Dev Log
+  language: en 
+  favicon: /favicon.ico 
   theme: # 更多主题 https://daisyui.com/docs/themes/
     light: winter # 主题的浅色模式
     dark: dracula # 主题的深色模式
