--- a/frosti.config.yaml
+++ b/frosti.config.yaml
@@ -50,16 +50,16 @@ site:
       href: /project
       svg: "material-symbols:code-blocks-outline"
       target: _self
-    - id: friend
-      text: Friend
-      href: /friend
-      svg: "material-symbols:supervisor-account-outline-rounded"
-      target: _self
+    # - id: friend
+    #   text: Friend
+    #   href: /friend
+    #   svg: "material-symbols:supervisor-account-outline-rounded"
+    #   target: _self
     - id: contact
       text: Contact
-      href: "mailto:contact.evesunmaple@outlook.com"
+      href: "https://t.me/Naster17"
       target: _blank # 在新标签页打开
-      svg: "material-symbols:attach-email-outline-rounded"
+      svg: "material-symbols:send"
 
 # 用户的个人信息
 user:
