--- a/frosti.config.yaml
+++ b/frosti.config.yaml
@@ -75,6 +75,14 @@ user:
         ariaLabel: Github
         title: Github
         svg: "ri:github-line"
+      - href: "https://t.me/naster17dev"
+        ariaLabel: Telegram
+        title: Telegram
+        svg: "ri:telegram-2-line"
+      - href: "https://youtu.be/dQw4w9WgXcQ"
+        ariaLabel: Youtube
+        title: Youtube
+        svg: "ri:youtube-line"
 
   footer:
     social:
