--- a/frosti.config.yaml
+++ b/frosti.config.yaml
@@ -2,7 +2,7 @@
 site:
   tab: Naster17
   title: ☠️ Naster17
-  description: Personal Blog | Dev Log
+  description: Personal Blog | Portfolio | Curriculum
   language: en 
   favicon: /favicon.ico 
   theme: 
