--- a/frosti.config.yaml
+++ b/frosti.config.yaml
@@ -1,7 +1,7 @@
 # 网站的基本信息
 site:
   tab: Naster17
-  title: ☠️ Naster17
+  title: Naster17 ☠️
   description: Personal Blog | Portfolio | Curriculum
   language: en 
   favicon: /favicon.ico 
